chore: setup TDD US15, 16, 17, 18, 19
